--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="/static/css/output.css" />
     <title>AutoU | Envio de Email</title>
   </head>
-  <body
-    class="bg-zinc-950 min-h-screen antialiased text-zinc-200"
-  >
+  <body class="bg-zinc-950 min-h-screen antialiased text-zinc-200 p-6">
     <header class="flex items-center justify-center h-20 w-full">
       <img
         draggable="false"
@@ -41,7 +39,9 @@
               id="message"
             ></textarea>
           </div>
-          <div class="flex items-end justify-between">
+          <div
+            class="flex flex-col md:flex-row space-y-4 md:items-center md:justify-between"
+          >
             <div class="space-y-3">
               <label
                 for="file-input"
@@ -50,12 +50,12 @@
               >
               <input
                 id="file-input"
-                class="p-0 pe-3 file:me-3 file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-zinc-800/30 border-zinc-800 flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
+                class="p-0 pe-3 file:me-3 cursor-pointer file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-zinc-800/30 border-zinc-800 flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
                 type="file"
               />
             </div>
             <button
-              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4"
+              class="inline-flex cursor-pointer w-full md:w-max items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4"
               type="submit"
             >
               Enviar
@@ -66,12 +66,34 @@
 
       <section
         id="reply-skeleton"
-        class="bg-accent animate-pulse rounded-md h-96 max-w-3xl w-full mx-auto p-6 hidden"
-      ></section>
+        class="bg-accent animate-pulse rounded-md h-96 max-w-3xl w-full mx-auto p-6 hidden min-h-96 flex-col justify-between gap-3"
+      >
+        <div class="flex items-center mb-2">
+          <span
+            class="inline-flex items-center justify-center text-transparent rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden bg-accent animate-pulse [a&]:hover:text-accent-foreground"
+            >Improdutivo</span
+          >
+          <button
+            class="ml-4 inline-flex items-center cursor-copy border justify-center rounded-md px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground bg-accent animate-pulse shadow-xs"
+          >
+            <div class="size-4"></div>
+          </button>
+        </div>
+        <pre
+          class="text-sm font-medium font-sans border p-2 rounded-md h-full whitespace-pre-wrap flex-1 bg-accent animate-pulse"
+        ></pre
+        >
+        <button
+          class="inline-flex items-center cursor-pointer justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-accent animate-pulse shadow-xs text-transparent h-10 rounded-md px-6 has-[>svg]:px-4"
+          type="button"
+        >
+          Voltar
+        </button>
+      </section>
 
       <section
         id="reply-section"
-        class="bg-zinc-800 rounded-md min-h-96 max-w-3xl w-full mx-auto p-6 hidden flex-col gap-3"
+        class="bg-zinc-800 rounded-md min-h-96 max-w-3xl w-full mx-auto p-6 hidden flex-col justify-between gap-3"
       >
         <div class="flex items-center mb-2">
           <span
@@ -80,24 +102,28 @@
           ></span>
           <button
             id="copy-button"
-            class="ml-4 inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground bg-primary shadow-xs hover:bg-primary/90"
+            class="ml-4 inline-flex items-center cursor-copy justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground bg-primary shadow-xs hover:bg-primary/90"
           >
             <img src="/static/assets/copy.svg" alt="copiar" class="size-4" />
           </button>
         </div>
         <pre
           id="reply-suggest"
-          class="text-sm font-medium font-sans border p-2 rounded-md h-full whitespace-pre-wrap"
+          class="text-sm font-medium font-sans border p-2 rounded-md h-full whitespace-pre-wrap flex-1"
         ></pre>
         <button
           id="back-button"
-          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4"
+          class="inline-flex items-center cursor-pointer justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4"
           type="button"
         >
           Voltar
         </button>
       </section>
     </main>
+
+    <footer class="flex flex-col items-center justify-center mt-12 text-xs">
+      <p>Desenvolvido com 💙 por <a class="font-medium" target="_blank" href="https://www.miguelk.com">Miguel Kapicius</a></p>
+    </footer>
   </body>
 </html>
 
@@ -126,6 +152,7 @@
 
     formSection.classList.toggle("hidden", state !== STATES.DEFAULT);
     replySkeleton.classList.toggle("hidden", state !== STATES.SENDING);
+    replySkeleton.classList.toggle("flex", state === STATES.SENDING);
     replySection.classList.toggle("hidden", state !== STATES.REPLIED);
     replySection.classList.toggle("flex", state === STATES.REPLIED);
     classification.classList.toggle(
